fix chart loading

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         </div>
   	</main>
   	<footer class="footer">
-        <script async defer src="https://www.gstatic.com/charts/loader.js"></script>
+        <script async defer src="https://www.gstatic.com/charts/loader.js" onload="javascript:google.charts.load('current', {packages: ['line']});"></script>
 		<script async defer src="./app.bundle.js"></script>
   	</footer>
 </body>
