draw chunk graph

--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,13 @@
         </section>
         <section class="result">
             <div id="chart"></div>
+            <div id="chunk"></div>
             <p class="error"></p>
         </section>
         </div>
   	</main>
   	<footer class="footer">
-        <script async defer src="https://www.gstatic.com/charts/loader.js" onload="javascript:google.charts.load('current', {packages: ['line']});"></script>
+        <script async defer src="https://www.gstatic.com/charts/loader.js" onload="javascript:google.charts.load('current', {packages: ['line', 'table']});"></script>
 		<script async defer src="./app.bundle.js"></script>
   	</footer>
 </body>
